force-app/main/default/objects/ClanWarLeagueRound__c/ClanWarLeagueRound__c.object-meta.xml
<CustomObject>
    <label>Clan War League Round</label>
    <nameField>
        <displayFormat>ROUND-{0000}</displayFormat>
        <label>Clan War League Round Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clan War League Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>