force-app/main/default/objects/ClanWarLeagueRound__c/fields/ClanWarLeagueGroup__c.field-meta.xml
<CustomField>
    <fullName>ClanWarLeagueGroup__c</fullName>
    <label>Clan War League Group</label>
    <referenceTo>ClanWarLeagueGroup__c</referenceTo>
    <relationshipLabel>Clan War League Rounds</relationshipLabel>
    <relationshipName>ClanWarLeagueRounds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>