force-app/main/default/objects/ClanWarLeagueRound__c/fields/RoundNumber__c.field-meta.xml
<CustomField>
    <fullName>RoundNumber__c</fullName>
    <label>Round Number</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>