force-app/main/default/objects/ClanWarLeagueRound__c/fields/WarTags__c.field-meta.xml
<CustomField>
    <fullName>WarTags__c</fullName>
    <externalId>true</externalId>
    <label>War Tags</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>